--- a/.github/workflows/library.yml
+++ b/.github/workflows/library.yml
@@ -16,12 +16,12 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Ruby
-      uses: actions/setup-ruby@v1
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: 2.7
+        ruby-version: 3.1.2
 
     - name: Set up Swift
-      uses: fwal/setup-swift@v1
+      uses: swift-actions/setup-swift@v2
       with:
         swift-version: '5.9'
 
